--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<h1 class = "pageHeaders" id = "mainPage">This is the website</h1> 
+<h1 class = "pageHeaders" id = "homePageHeader">This is the website</h1> 
 
 </body>
 </html>
