--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
 </head>
 
 <body>
-<h1 class = "pageHeaders" id = "homePageHeader">This is the website</h1> 
-
+  
+  <div class = "topNav" id = "indexTopNav">
+    <h1 class = "pageHeaders" id = "homePageHeader">This is the website</h1>
+    
+    <a class = "active" href = "index.html">Home</a>
+    <a href = "html/sports.html">Sports</a>
+    <a href = "html/investing.html">Investing</a>
+    <a href = "html/games.html">Games</a>
+  </div>
+  
 </body>
 </html>
