--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <div class = "topNav" id = "indexTopNav">
     <h1 class = "pageHeaders" id = "homePageHeader">This is the website</h1>
     
-    <a class = "active" href = "index.html">Home</a>
-    <a href = "html/sports.html">Sports</a>
-    <a href = "html/investing.html">Investing</a>
-    <a href = "html/games.html">Games</a>
+    <a class = "active navButton hvr-grow-shadow" href = "index.html">Home</a>
+    <a class = "navButton hvr-grow-shadow" href = "html/sports.html">Sports</a>
+    <a class = "navButton hvr-grow-shadow" href = "html/investing.html">Investing</a>
+    <a class = "navButton hvr-grow-shadow" href = "html/games.html">Games</a>
   </div>
   
 </body>
