--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang = "en">
 
 <head>
-<title> Hello World! </title>
-<meta charset = "utf-8" />
+  <title> Hello World! </title>
+  <meta charset = "utf-8" />
+  <link rel="stylesheet" href="css/styleMain.css">
 </head>
 
 <body>
