--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <h1 class = "pageHeaders" id = "homePageHeader">This is the website</h1>
     
     <a class = "active navButton hvr-float-shadow" href = "index.html">Home</a>
-    <a class = "navButton hvr-grow-shadow" href = "html/sports.html">Sports</a>
-    <a class = "navButton hvr-grow-shadow" href = "html/investing.html">Investing</a>
-    <a class = "navButton hvr-grow-shadow" href = "html/games.html">Games</a>
+    <a class = "navButton hvr-float-shadow" href = "html/sports.html">Sports</a>
+    <a class = "navButton hvr-float-shadow" href = "html/investing.html">Investing</a>
+    <a class = "navButton hvr-float-shadow" href = "html/games.html">Games</a>
   </div>
   
 </body>
