--- a/html/sports.html
+++ b/html/sports.html
@@ -4,7 +4,7 @@
 <head>
   <title>Sports</title>
   <meta charset = "utf-8" />
-  <link rel="stylesheet" href="css/styleMain.css">
+  <link rel="stylesheet" href="../css/styleMain.css">
 </head>
 
 <body>
@@ -12,10 +12,10 @@
   <div class = "topNav" id = "indexTopNav">
     <h1 class = "pageHeaders" id = "sportsPageHeader">This is the sports page</h1>
     
-    <a class = "navButton hvr-float-shadow" href = "index.html">Home</a>
-    <a class = "active navButton hvr-float-shadow" href = "html/sports.html">Sports</a>
-    <a class = "navButton hvr-float-shadow" href = "html/investing.html">Investing</a>
-    <a class = "navButton hvr-float-shadow" href = "html/games.html">Games</a>
+    <a class = "navButton hvr-float-shadow" href = "../index.html">Home</a>
+    <a class = "active navButton hvr-float-shadow" href = "sports.html">Sports</a>
+    <a class = "navButton hvr-float-shadow" href = "investing.html">Investing</a>
+    <a class = "navButton hvr-float-shadow" href = "games.html">Games</a>
   </div>
   
 </body>
