--- a/html/investing.html
+++ b/html/investing.html
@@ -12,7 +12,7 @@
   <div class = "topNav" id = "indexTopNav">
     <h1 class = "pageHeaders" id = "investingPageHeader">This is the investing page</h1>
     
-    <a class = "navButton hvr-float-shadow" href = "index.html">Home</a>
+    <a class = "navButton hvr-float-shadow" href = "../index.html">Home</a>
     <a class = "navButton hvr-float-shadow" href = "sports.html">Sports</a>
     <a class = "active navButton hvr-float-shadow" href = "investing.html">Investing</a>
     <a class = "navButton hvr-float-shadow" href = "games.html">Games</a>
