--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class = "topNav" id = "indexTopNav">
     <h1 class = "pageHeaders" id = "homePageHeader">This is the website</h1>
     
-    <a class = "active navButton" href = "index.html">Home</a>
+    <a id = "active" class = "navButton" href = "index.html">Home</a>
     <a class = "navButton hvr-float-shadow" href = "html/sports.html">Sports</a>
     <a class = "navButton hvr-float-shadow" href = "html/investing.html">Investing</a>
     <a class = "navButton hvr-float-shadow" href = "html/games.html">Games</a>
