--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 
 <body>
-  
+
   <div class = "topNav" id = "indexTopNav">
     <h1 class = "pageHeaders" id = "homePageHeader">This is the website</h1>
-    
+
     <a id = "active" class = "navButton hvr-float-shadow" href = "index.html">Home</a>
-    <a class = "navButton hvr-float-shadow" href = "html/sports.html">Sports</a>
-    <a class = "navButton hvr-float-shadow" href = "html/investing.html">Investing</a>
-    <a class = "navButton hvr-float-shadow" href = "html/games.html">Games</a>
+    <a class = "navButton hvr-float-shadow" href = "html/sports/sports.html">Sports</a>
+    <a class = "navButton hvr-float-shadow" href = "html/investing/investing.html">Investing</a>
+    <a class = "navButton hvr-float-shadow" href = "html/games/games.html">Games</a>
   </div>
-  
+
 </body>
 </html>
