Started creating in wrong branch. Commiting and switching to breakout br

--- a/html/games/games.html
+++ b/html/games/games.html
@@ -5,6 +5,7 @@
   <title>Games</title>
   <meta charset = "utf-8" />
   <link rel="stylesheet" href="../../css/styleMain.css">
+  <link rel="stylesheet" href="breakout/breakout.css"> 
 </head>
 
 <body>
@@ -17,6 +18,10 @@
     <a class = "navButton hvr-float-shadow" href = "../investing/investing.html">Investing</a>
     <a class = "active navButton hvr-float-shadow" href = "games.html">Games</a>
   </div>
+
+  <canvas id = "breakoutCanvas" width ="480" height="320"></canvas>
+
+  <script src="breakout/breakout.js"></script>
 
 </body>
 </html>
