--- a/html/investing/investing.html
+++ b/html/investing/investing.html
@@ -4,19 +4,19 @@
 <head>
   <title>Investing</title>
   <meta charset = "utf-8" />
-  <link rel="stylesheet" href="../css/styleMain.css">
+  <link rel="stylesheet" href="../../css/styleMain.css">
 </head>
 
 <body>
-  
+
   <div class = "topNav" id = "indexTopNav">
     <h1 class = "pageHeaders" id = "investingPageHeader">This is the investing page</h1>
-    
-    <a class = "navButton hvr-float-shadow" href = "../index.html">Home</a>
-    <a class = "navButton hvr-float-shadow" href = "sports.html">Sports</a>
+
+    <a class = "navButton hvr-float-shadow" href = "../../index.html">Home</a>
+    <a class = "navButton hvr-float-shadow" href = "../sports/sports.html">Sports</a>
     <a class = "active navButton hvr-float-shadow" href = "investing.html">Investing</a>
-    <a class = "navButton hvr-float-shadow" href = "games.html">Games</a>
+    <a class = "navButton hvr-float-shadow" href = "../games/games.html">Games</a>
   </div>
-  
+
 </body>
 </html>
