--- a/html/sports/sports.html
+++ b/html/sports/sports.html
@@ -4,19 +4,19 @@
 <head>
   <title>Sports</title>
   <meta charset = "utf-8" />
-  <link rel="stylesheet" href="../css/styleMain.css">
+  <link rel="stylesheet" href="../../css/styleMain.css">
 </head>
 
 <body>
-  
+
   <div class = "topNav" id = "indexTopNav">
     <h1 class = "pageHeaders" id = "sportsPageHeader">This is the sports page</h1>
-    
-    <a class = "navButton hvr-float-shadow" href = "../index.html">Home</a>
+
+    <a class = "navButton hvr-float-shadow" href = "../../index.html">Home</a>
     <a class = "active navButton hvr-float-shadow" href = "sports.html">Sports</a>
-    <a class = "navButton hvr-float-shadow" href = "investing.html">Investing</a>
-    <a class = "navButton hvr-float-shadow" href = "games.html">Games</a>
+    <a class = "navButton hvr-float-shadow" href = "../investing/investing.html">Investing</a>
+    <a class = "navButton hvr-float-shadow" href = "../games/games.html">Games</a>
   </div>
-  
+
 </body>
 </html>
