--- a/html/investing/investing.html
+++ b/html/investing/investing.html
@@ -3,7 +3,8 @@
 
 <head>
   <title>Investing</title>
-  <meta charset = "utf-8" />
+  <meta charset = "utf-8">
+  <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
   <link rel="stylesheet" href="../../css/styleMain.css">
 </head>
 
