--- a/html/games/games.html
+++ b/html/games/games.html
@@ -20,7 +20,11 @@
     <a class = "active navButton hvr-float-shadow" href = "games.html">Games</a>
   </div>
 
-  <canvas id = "breakoutCanvas" width ="480" height="320"></canvas>
+  <div class = "container">
+    <canvas id = "breakoutCanvas" width ="480" height="320"></canvas>
+
+    <input type="button" id = "breakoutStart" value = "Start">
+  </div>
 
   <script src="breakout/breakout.js"></script>
 
