--- a/html/games/games.html
+++ b/html/games/games.html
@@ -23,7 +23,7 @@
   <div class = "container">
     <canvas id = "breakoutCanvas" width ="480" height="320"></canvas>
 
-    <input type="button" id = "breakoutStart" value = "Start">
+    <!--<input type="button" id = "breakoutStart" value = "Start">-->
   </div>
 
   <script src="breakout/breakout.js"></script>
