--- a/html/games/games.html
+++ b/html/games/games.html
@@ -4,7 +4,7 @@
 <head>
   <title>Games</title>
   <meta charset = "utf-8">
-  <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
+  <meta name = "viewport" content = "width = device-width, initial-scale = 1.0, maximum-scale = 1, user-scalable = 0">
   <link rel="stylesheet" href="../../css/styleMain.css">
   <link rel="stylesheet" href="breakout/breakout.css">
 </head>
