added cancelanimationframe after gameover

--- a/html/games/games.html
+++ b/html/games/games.html
@@ -4,12 +4,12 @@
 <head>
   <title>Games</title>
   <meta charset = "utf-8">
-  <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
+  <meta name = "viewport" content = "width = device-width, initial-scale = 1">
   <link rel="stylesheet" href="../../css/styleMain.css">
   <link rel="stylesheet" href="breakout/breakout.css">
 </head>
 
-<body>
+<body id = "gamesBody">
 
   <div class = "topNav" id = "indexTopNav">
     <h1 class = "pageHeaders" id = "gamesPageHeader">These are the games</h1>
