--- a/html/games/games.html
+++ b/html/games/games.html
@@ -23,8 +23,7 @@
   <div class = "container">
     <canvas id = "breakoutCanvas" width ="480" height="320"></canvas>
     <input type = "range" min = "2" max = "30" value = "10" class = "slider" id = "ballSizeSlider">
-
-    <!--<input type="button" id = "breakoutStart" value = "Start">-->
+    <input type = "range" min = "1" max = "8" value = "3" class = "slider" id = "rowSlider">
   </div>
 
   <script src="breakout/breakout.js"></script>
