--- a/html/games/games.html
+++ b/html/games/games.html
@@ -12,7 +12,7 @@
 <body id = "gamesBody">
 
   <div class = "topNav" id = "indexTopNav">
-    <h1 class = "pageHeaders" id = "gamesPageHeader">These are the games</h1>
+    <h1 class = "pageHeaders" id = "gamesPageHeader">These are the game<span class = "pageHeaders" id = "superPaddle">s</span></h1>
 
     <a class = "navButton hvr-float-shadow" href = "../../index.html">Home</a>
     <a class = "navButton hvr-float-shadow" href = "../sports/sports.html">Sports</a>
