Changing layout structure so site is more mobile friendly
Specified play = true; to only fire when either arrow key is pressed.
Trying to set style to change when device width is less than 800 px

--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 
 <body>
 
-  <div class = "topNav" id = "indexTopNav">
-    <h1 class = "pageHeaders" id = "homePageHeader">This is the website</h1>
-
-    <a id = "active" class = "navButton hvr-float-shadow" href = "index.html">Home</a>
-    <a class = "navButton hvr-float-shadow" href = "html/sports/sports.html">Sports</a>
-    <a class = "navButton hvr-float-shadow" href = "html/investing/investing.html">Investing</a>
-    <a class = "navButton hvr-float-shadow" href = "html/games/games.html">Games</a>
+  <div class = "pageHeaders">
+    <h1 id = "homePageHeader">This is the website</h1>
+  </div>
+  <div class = "navLinks" id = "homePageNavLinks">
+    <a id = "active" class = "navButton hvr-bob" href = "index.html">Home</a>
+    <a class = "navButton hvr-bob" href = "html/sports/sports.html">Sports</a>
+    <a class = "navButton hvr-bob" href = "html/investing/investing.html">Investing</a>
+    <a class = "navButton hvr-bob" href = "html/games/games.html">Games</a>
   </div>
 
 </body>
