--- a/html/games/games.html
+++ b/html/games/games.html
@@ -11,16 +11,17 @@
 
 <body id = "gamesBody">
 
-  <div class = "topNav" id = "indexTopNav">
-    <h1 class = "pageHeaders" id = "gamesPageHeader">These are the game<span class = "pageHeaders" id = "superPaddle">s</span></h1>
-
-    <a class = "navButton hvr-float-shadow" href = "../../index.html">Home</a>
-    <a class = "navButton hvr-float-shadow" href = "../sports/sports.html">Sports</a>
-    <a class = "navButton hvr-float-shadow" href = "../investing/investing.html">Investing</a>
-    <a class = "active navButton hvr-float-shadow" href = "games.html">Games</a>
+  <div class = "pageHeaders">
+    <h1 id = "gamesPageHeader">These are the game<span id = "superPaddle">s</span></h1>
+  </div>
+  <div class = "navLinks">
+    <a class = "navButton hvr-bob" href = "../../index.html">Home</a>
+    <a class = "navButton hvr-bob" href = "../sports/sports.html">Sports</a>
+    <a class = "navButton hvr-bob" href = "../investing/investing.html">Investing</a>
+    <a class = "active navButton hvr-bob" href = "games.html">Games</a>
   </div>
 
-  <div class = "container">
+  <div class = "breakoutContainer">
     <canvas id = "breakoutCanvas" width ="480" height="320"></canvas>
     <input type = "range" min = "2" max = "25" value = "10" class = "slider" id = "ballSizeSlider">
     <input type = "range" min = "1" max = "8" value = "3" class = "slider" id = "rowSlider">
