--- a/html/investing/investing.html
+++ b/html/investing/investing.html
@@ -10,13 +10,14 @@
 
 <body>
 
-  <div class = "topNav" id = "indexTopNav">
-    <h1 class = "pageHeaders" id = "investingPageHeader">This is the investing page</h1>
-
-    <a class = "navButton hvr-float-shadow" href = "../../index.html">Home</a>
-    <a class = "navButton hvr-float-shadow" href = "../sports/sports.html">Sports</a>
-    <a class = "active navButton hvr-float-shadow" href = "investing.html">Investing</a>
-    <a class = "navButton hvr-float-shadow" href = "../games/games.html">Games</a>
+  <div class = "pageHeaders" id = "indexPageHeader">
+    <h1 id = "investingPageHeader">This is the investing page</h1>
+  </div>
+  <div class = "navLinks">
+    <a class = "navButton hvr-bob" href = "../../index.html">Home</a>
+    <a class = "navButton hvr-bob" href = "../sports/sports.html">Sports</a>
+    <a class = "active navButton hvr-bob" href = "investing.html">Investing</a>
+    <a class = "navButton hvr-bob" href = "../games/games.html">Games</a>
   </div>
 
 </body>
