--- a/html/sports/sports.html
+++ b/html/sports/sports.html
@@ -10,13 +10,14 @@
 
 <body>
 
-  <div class = "topNav" id = "indexTopNav">
-    <h1 class = "pageHeaders" id = "sportsPageHeader">This is the sports page</h1>
-
-    <a class = "navButton hvr-float-shadow" href = "../../index.html">Home</a>
-    <a class = "active navButton hvr-float-shadow" href = "sports.html">Sports</a>
-    <a class = "navButton hvr-float-shadow" href = "../investing/investing.html">Investing</a>
-    <a class = "navButton hvr-float-shadow" href = "../games/games.html">Games</a>
+  <div class = "pageHeaders">
+    <h1 id = "sportsPageHeader">This is the sports page</h1>
+  </div>
+  <div class = "navLinks">
+    <a class = "navButton hvr-bob" href = "../../index.html">Home</a>
+    <a class = "active navButton hvr-bob" href = "sports.html">Sports</a>
+    <a class = "navButton hvr-bob" href = "../investing/investing.html">Investing</a>
+    <a class = "navButton hvr-bob" href = "../games/games.html">Games</a>
   </div>
 
 </body>
