--- a/html/games/games.html
+++ b/html/games/games.html
@@ -4,9 +4,9 @@
 <head>
   <title>Games</title>
   <meta charset = "utf-8">
-  <meta name = "viewport" content = "width = device-width, initial-scale = 0.25">
-  <link rel="stylesheet" href="../../css/styleMain.css">
+  <meta name = "viewport" content = "width = device-width, initial-scale = .8">
   <link rel="stylesheet" href="breakout/breakout.css">
+  <link rel="stylesheet" href="../../css/styleMain.css">
 </head>
 
 <body id = "gamesBody">
