Push page responsiveness improvements
Streamlined html container names
refined navLinks positioning
added flex to navLinks
aligned items center to vertically align
Increased max-width so wider screens get centered content
changed height of links and header containers to compress the containers on smaller screens
centered breakout canvas on smaller screens

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang = "en">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-124362808-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-124362808-1');
+</script>
+
   <title> Hello World! </title>
   <meta charset = "utf-8">
   <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
@@ -10,10 +20,10 @@
 
 <body>
 
-  <div class = "pageHeaders">
-    <h1 id = "homePageHeader">This is the website</h1>
+  <div class = "headerContainer">
+    <h1 id = "homePageHeader">This is my website.</h1>
   </div>
-  <div class = "navLinks" id = "homePageNavLinks">
+  <div class = "navLinksContainer">
     <a id = "active" class = "navButton hvr-bob" href = "index.html">Home</a>
     <a class = "navButton hvr-bob" href = "html/sports/sports.html">Sports</a>
     <a class = "navButton hvr-bob" href = "html/investing/investing.html">Investing</a>
