--- a/html/investing/investing.html
+++ b/html/investing/investing.html
@@ -2,6 +2,16 @@
 <html lang = "en">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-124362808-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-124362808-1');
+</script>
+
   <title>Investing</title>
   <meta charset = "utf-8">
   <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
@@ -10,10 +20,10 @@
 
 <body>
 
-  <div class = "pageHeaders" id = "indexPageHeader">
-    <h1 id = "investingPageHeader">This is the investing page</h1>
+  <div class = "headerContainer" id = "indexPageHeader">
+    <h1 id = "investingPageHeader">This is the investing page.</h1>
   </div>
-  <div class = "navLinks">
+  <div class = "navLinksContainer">
     <a class = "navButton hvr-bob" href = "../../index.html">Home</a>
     <a class = "navButton hvr-bob" href = "../sports/sports.html">Sports</a>
     <a class = "active navButton hvr-bob" href = "investing.html">Investing</a>
