--- a/html/games/games.html
+++ b/html/games/games.html
@@ -34,9 +34,12 @@
   <div class = "breakoutContainer">
     <canvas id = "breakoutCanvas" width ="480" height="320"></canvas>
   </div>
-  <div class = "breakoutSliders">
-    <input type = "range" min = "2" max = "25" value = "10" class = "slider" id = "ballSizeSlider">
-    <input type = "range" min = "1" max = "8" value = "3" class = "slider" id = "rowSlider">
+
+  <div class = "ballSizeSliderContainer">
+    <input id = "ballSizeSlider" class = "slider" type = "range" min = "2" max = "25" value = "10">
+  </div>
+  <div class = "rowSliderContainer">
+    <input id = "rowSlider" class = "slider" type = "range" min = "1" max = "8" value = "3">
   </div>
 
   <script src="breakout/breakout.js"></script>
