update divs to semantic titles

--- a/html/investing/investing.html
+++ b/html/investing/investing.html
@@ -20,15 +20,15 @@
 
 <body>
 
-  <div class = "headerContainer" id = "indexPageHeader">
+  <header class = "headerContainer" id = "indexPageHeader">
     <h1 id = "investingPageHeader">This is the investing page.</h1>
-  </div>
-  <div class = "navLinksContainer">
+  </header>
+  <nav class = "navLinksContainer">
     <a class = "navButton hvr-bob" href = "../../index.html">Home</a>
     <a class = "navButton hvr-bob" href = "../sports/sports.html">Sports</a>
     <a class = "active navButton hvr-bob" href = "investing.html">Investing</a>
     <a class = "navButton hvr-bob" href = "../games/games.html">Games</a>
-  </div>
+  </nav>
 
 </body>
 </html>
