--- a/html/sports/sports.html
+++ b/html/sports/sports.html
@@ -20,15 +20,15 @@
 
 <body>
 
-  <div class = "headerContainer">
+  <header class = "headerContainer">
     <h1 id = "sportsPageHeader">This is the sports page.</h1>
-  </div>
-  <div class = "navLinksContainer">
+  </header>
+  <nav class = "navLinksContainer">
     <a class = "navButton hvr-bob" href = "../../index.html">Home</a>
     <a class = "active navButton hvr-bob" href = "sports.html">Sports</a>
     <a class = "navButton hvr-bob" href = "../investing/investing.html">Investing</a>
     <a class = "navButton hvr-bob" href = "../games/games.html">Games</a>
-  </div>
+  </nav>
 
 </body>
 </html>
