--- a/html/games/games.html
+++ b/html/games/games.html
@@ -21,15 +21,15 @@
 
 <body id = "gamesBody">
 
-  <div class = "headerContainer">
+  <header class = "headerContainer">
     <h1 id = "gamesPageHeader">These are the game<span id = "superPaddle">s.</span></h1>
-  </div>
-  <div class = "navLinksContainer">
+  </header>
+  <nav class = "navLinksContainer">
     <a class = "navButton hvr-bob" href = "../../index.html">Home</a>
     <a class = "navButton hvr-bob" href = "../sports/sports.html">Sports</a>
     <a class = "navButton hvr-bob" href = "../investing/investing.html">Investing</a>
     <a class = "active navButton hvr-bob" href = "games.html">Games</a>
-  </div>
+  </nav>
 
   <div class = "breakoutContainer">
     <canvas id = "breakoutCanvas" width ="480" height="320"></canvas>
