--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 
 <body>
 
-  <div class = "headerContainer">
+  <header class = "headerContainer">
     <h1 id = "homePageHeader">This is my website.</h1>
-  </div>
-  <div class = "navLinksContainer">
+  </header>
+  <nav class = "navLinksContainer">
     <a id = "active" class = "navButton hvr-bob" href = "index.html">Home</a>
     <a class = "navButton hvr-bob" href = "html/sports/sports.html">Sports</a>
     <a class = "navButton hvr-bob" href = "html/investing/investing.html">Investing</a>
     <a class = "navButton hvr-bob" href = "html/games/games.html">Games</a>
-  </div>
+  </nav>
 
 </body>
 </html>
