--- a/html/games/games.html
+++ b/html/games/games.html
@@ -24,6 +24,9 @@
   <header class = "headerContainer">
     <h1 id = "gamesPageHeader">These are the game<span id = "superPaddle">s.</span></h1>
   </header>
+  <div class = "logoContainer">
+    <img src = "../../logo/csTransparant.png">
+  </div>
   <nav class = "navLinksContainer">
     <a class = "navButton hvr-bob" href = "../../index.html">Home</a>
     <a class = "navButton hvr-bob" href = "../sports/sports.html">Sports</a>
