--- a/html/investing/investing.html
+++ b/html/investing/investing.html
@@ -23,6 +23,9 @@
   <header class = "headerContainer" id = "indexPageHeader">
     <h1 id = "investingPageHeader">This is the investing page.</h1>
   </header>
+  <div class = "logoContainer">
+    <img src = "../../logo/csTransparant.png">
+  </div>
   <nav class = "navLinksContainer">
     <a class = "navButton hvr-bob" href = "../../index.html">Home</a>
     <a class = "navButton hvr-bob" href = "../sports/sports.html">Sports</a>
