--- a/html/sports/sports.html
+++ b/html/sports/sports.html
@@ -23,6 +23,9 @@
   <header class = "headerContainer">
     <h1 id = "sportsPageHeader">This is the sports page.</h1>
   </header>
+  <div class = "logoContainer">
+    <img src = "../../logo/csTransparant.png">
+  </div>
   <nav class = "navLinksContainer">
     <a class = "navButton hvr-bob" href = "../../index.html">Home</a>
     <a class = "active navButton hvr-bob" href = "sports.html">Sports</a>
