--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
   <header class = "headerContainer">
     <h1 id = "homePageHeader">This is my website.</h1>
   </header>
+  <div class = "logoContainer">
+    <img src = "logo/csTransparant.png">
+  </div>
   <nav class = "navLinksContainer">
     <a id = "active" class = "navButton hvr-bob" href = "index.html">Home</a>
     <a class = "navButton hvr-bob" href = "html/sports/sports.html">Sports</a>
