Added Welcome Banner to home page

--- a/index.html
+++ b/index.html
@@ -33,5 +33,9 @@
     <a class = "navButton hvr-bob" href = "html/games/games.html">Games</a>
   </nav>
 
+  <div class="welcomeBanner">
+    <h2 class="welcomeBanner">Welcome!</h2>
+  </div>
+
 </body>
 </html>
