--- a/html/sports/sports.html
+++ b/html/sports/sports.html
@@ -33,5 +33,9 @@
     <a class = "navButton hvr-bob" href = "../games/games.html">Games</a>
   </nav>
 
+  <div class = "pageBanner">
+    <h2 class = "pageBanner">Humble thoughts on the NBA</h2>
+  </div>
+
 </body>
 </html>
