--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <a class = "navButton hvr-bob" href = "html/games/games.html">Games</a>
   </nav>
 
-  <div class="welcomeBanner">
-    <h2 class="welcomeBanner">Welcome!</h2>
+  <div class="homeBanner">
+    <h2 class="homeBanner">Welcome!</h2>
   </div>
 
 </body>
