--- a/html/sports/sports.html
+++ b/html/sports/sports.html
@@ -34,7 +34,7 @@
   </nav>
 
   <div class = "pageBanner">
-    <h2 class = "pageBanner">Humble thoughts on the NBA</h2>
+    <h2 class = "pageBanner">Mostly the NBA</h2>
   </div>
 
 </body>
