Changed Games header

--- a/html/games/games.html
+++ b/html/games/games.html
@@ -35,7 +35,7 @@
   </nav>
 
   <div class = "pageBanner">
-    <h2 class = "pageBanner">Javascript games I wrote</h2>
+    <h2 class = "pageBanner">Javascript games</h2>
   </div>
 
   <div class = "breakoutContainer">
