Sports article containers
Added containers for sports articles
Improved area in breakout game where ball hits paddle

--- a/html/investing/investing.html
+++ b/html/investing/investing.html
@@ -34,7 +34,7 @@
   </nav>
 
   <div class = "pageBanner">
-    <h2 class = "pageBanner">Stocks and other companies</h2>
+    <h2 class = "pageBanner">Stocks and Business</h2>
   </div>
 
 </body>
