--- a/html/games/games.html
+++ b/html/games/games.html
@@ -14,7 +14,7 @@
 
   <title>Games</title>
   <meta charset = "utf-8">
-  <meta name = "viewport" content = "width = device-width, initial-scale = .8">
+  <meta name = "viewport" content = "width = device-width, initial-scale = 1">
   <link rel="stylesheet" href="breakout/breakout.css">
   <link rel="stylesheet" href="../../css/styleMain.css">
 </head>
