--- a/html/sports/sports.html
+++ b/html/sports/sports.html
@@ -37,5 +37,14 @@
     <h2 class = "pageBanner">Mostly the NBA</h2>
   </div>
 
+  <div class = "articleContainer">
+    <div class = "leftArticleContainer">
+    </div>
+    <div class = "middleArticleContainer">
+    </div>
+    <div class = "rightArticleContainer">
+    </div>
+  </div>
+
 </body>
 </html>
