--- a/html/sports/sports.html
+++ b/html/sports/sports.html
@@ -37,12 +37,12 @@
     <h2 class = "pageBanner">Mostly the NBA</h2>
   </div>
 
-  <div class = "articleContainer">
-    <div class = "leftArticleContainer">
+  <div class = "cardContainer">
+    <div class = "leftCardContainer">
     </div>
-    <div class = "middleArticleContainer">
+    <div class = "middleCardContainer">
     </div>
-    <div class = "rightArticleContainer">
+    <div class = "rightCardContainer">
     </div>
   </div>
 
