Possible fix to breakoutPreview not showing online

--- a/html/games/games.html
+++ b/html/games/games.html
@@ -42,7 +42,7 @@
     <div class = "leftCardContainer">
     </div>
     <div class = "middleCardContainer" onclick = "location.href='breakout/breakout.html';">
-      <img id = "breakoutPreview" src = "../../images/breakoutPreview.png">
+      <img id = "breakoutPreview" src = "../../images/breakoutPreview.PNG">
     </div>
     <div class = "rightCardContainer">
     </div>
