Updated element calls in breakout.js to reflect new breakout page

--- a/html/games/breakout/breakout.html
+++ b/html/games/breakout/breakout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang = "en" id = "gamesHTML">
+<html lang = "en" id = "breakoutHTML">
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
