--- a/html/games/games.html
+++ b/html/games/games.html
@@ -39,7 +39,7 @@
   </div>
 
   <div class = "cardContainer">
-    <div class = "leftCardContainer">
+    <div class = "leftCardContainer minesweeperCard">
     </div>
     <div class = "middleCardContainer" onclick = "location.href='breakout/breakout.html';">
       <img id = "breakoutPreview" src = "../../images/breakoutPreview.PNG">
