--- a/html/games/minesweeper/minesweeper.html
+++ b/html/games/minesweeper/minesweeper.html
@@ -38,6 +38,10 @@
     <h2 class = "pageBanner">Minesweeper</h2>
   </div>
 
+  <div class = "newGameContainer">
+    <button id = "newGameButton" class = "newGameButton" onclick="newGame()">New Game</button>
+  </div>
+
   <div class = "minesweeperContainer">
     <canvas id = "minesweeperCanvas" oncontextmenu="return false"></canvas>
   </div>
