Improve live minesweeper
Added shortcut in games card

--- a/html/games/games.html
+++ b/html/games/games.html
@@ -39,10 +39,11 @@
   </div>
 
   <div class = "cardContainer">
-    <div class = "leftCardContainer">
+    <div class = "leftCardContainer" onclick = "location.href='minesweeper/minesweeper.html';">
+      <img id = "minesweeperPreview" src = "../../images/minesweeperPreview.PNG" class = "gamePreview">
     </div>
     <div class = "middleCardContainer" onclick = "location.href='breakout/breakout.html';">
-      <img id = "breakoutPreview" src = "../../images/breakoutPreview.PNG">
+      <img id = "breakoutPreview" class = "gamePreview" src = "../../images/breakoutPreview.PNG">
     </div>
     <div class = "rightCardContainer">
     </div>
