--- a/html/games/breakout/breakout.html
+++ b/html/games/breakout/breakout.html
@@ -14,7 +14,7 @@
 
   <title>Breakout</title>
   <meta charset = "utf-8">
-  <meta name = "viewport" content = "width = device-width, initial-scale = 1">
+  <meta name = "viewport" content = "width = device-width, initial-scale = 1, user-scalable = 0">
   <link rel="stylesheet" href="breakout.css">
   <link rel="stylesheet" href="../../../css/styleMain.css">
 </head>
