--- a/html/games/minesweeper/minesweeper.html
+++ b/html/games/minesweeper/minesweeper.html
@@ -14,7 +14,7 @@
 
   <title>Minesweeper</title>
   <meta charset = "utf-8">
-  <meta name = "viewport" content = "width = device-width, initial-scale = 1">
+  <meta name = "viewport" content = "width = device-width, initial-scale = 1, user-scalable = 0">
   <link rel="stylesheet" href="../../../css/styleMain.css">
 </head>
 
@@ -40,6 +40,10 @@
 
   <div class = "newGameContainer">
     <button id = "newGameButton" class = "newGameButton" onclick="newGame()">New Game</button>
+  </div>
+
+  <div class = "timeContainer">
+    <h5>Time Placeholder</h5>
   </div>
 
   <div class = "minesweeperContainer">
