Added scoreboard to Minesweeper

--- a/html/games/minesweeper/minesweeper.html
+++ b/html/games/minesweeper/minesweeper.html
@@ -42,8 +42,15 @@
     <button id = "newGameButton" class = "newGameButton" onclick="newGame()">New Game</button>
   </div>
 
-  <div class = "timeContainer">
-    <h5>Time Placeholder</h5>
+  <div class = "scoreboardContainer">
+    <div id = "scoreboardMS" class = "scoreboard">
+      <div id = "printBombs" class = "score leftScore">
+      </div>
+      <div id = "printTime" class = "score middleScore">
+      </div>
+      <div id = "printMarked" class = "score rightScore">
+      </div>
+    </div>
   </div>
 
   <div class = "minesweeperContainer">
