--- a/html/games/minesweeper/minesweeper.html
+++ b/html/games/minesweeper/minesweeper.html
@@ -42,6 +42,10 @@
     <button id = "newGameButton" class = "newGameButton" onclick="newGame()">New Game</button>
   </div>
 
+  <div class = "bestTimeContainer">
+    <span id = "bestTime" class = "bestTime">blah<span>
+  </div>
+
   <div class = "scoreboardContainer">
     <div id = "scoreboardMS" class = "scoreboard">
       <div id = "printBombs" class = "score leftScore">
