Added bestTime message

--- a/html/games/minesweeper/minesweeper.html
+++ b/html/games/minesweeper/minesweeper.html
@@ -42,11 +42,9 @@
     <button id = "newGameButton" class = "newGameButton" onclick="newGame()">New Game</button>
   </div>
 
-<!--
   <div class = "bestTimeContainer">
-    <span id = "bestTime" class = "bestTime">blah<span>
+    <span id = "bestTime" class = "bestTime">Good luck<span>
   </div>
--->
 
   <div class = "scoreboardContainer">
     <div id = "scoreboardMS" class = "scoreboard">
