disable_user_select

--- a/html/games/minesweeper/minesweeper.html
+++ b/html/games/minesweeper/minesweeper.html
@@ -19,7 +19,7 @@
 </head>
 
 
-<body id = "minesweeperBody">
+<body id = "minesweeperBody" style="user-select: none;">
 
   <header class = "headerContainer">
     <h1 id = "gamesPageHeader">This is Minesweeper</h1>
