change-file-name

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   </div>
   <nav class = "navLinksContainer">
     <a id = "active" class = "navButton hvr-bob" href = "index.html">Home</a>
-    <a class = "navButton hvr-bob" href = "html/sports/sports.html">Sports</a>
-    <a class = "navButton hvr-bob" href = "html/investing/investing.html">Investing</a>
-    <a class = "navButton hvr-bob" href = "html/games/games.html">Games</a>
+    <a class = "navButton hvr-bob" href = "pages/sports/sports.html">Sports</a>
+    <a class = "navButton hvr-bob" href = "pages/investing/investing.html">Investing</a>
+    <a class = "navButton hvr-bob" href = "pages/games/games.html">Games</a>
   </nav>
 
   <div class="homeBanner">
