Remove commented out navigation links

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
   </div>
   <nav class = "navLinksContainer">
     <a id = "active" class = "navButton hvr-bob" href = "index.html">Home</a>
-    <a class = "navButton hvr-bob" href = "pages/sports/sports.html">Sports</a>
+    <!-- <a class = "navButton hvr-bob" href = "pages/sports/sports.html">Sports</a> -->
     <a class = "navButton hvr-bob" href = "pages/investing/investing.html">Investing</a>
     <a class = "navButton hvr-bob" href = "pages/games/games.html">Games</a>
   </nav>
 
-  <div class="homeBanner">
+  <div>
     <h2 class="homeBanner">Welcome!</h2>
   </div>
 
