--- a/pages/games/breakout/breakout.html
+++ b/pages/games/breakout/breakout.html
@@ -30,7 +30,7 @@
   </div>
   <nav class = "navLinksContainer">
     <a class = "navButton hvr-bob" href = "../../../index.html">Home</a>
-    <a class = "navButton hvr-bob" href = "../../sports/sports.html">Sports</a>
+    <!-- <a class = "navButton hvr-bob" href = "../../sports/sports.html">Sports</a> -->
     <a class = "navButton hvr-bob" href = "../../investing/investing.html">Investing</a>
     <a class = "active navButton hvr-bob" href = "../games.html">Games</a>
   </nav>
